fix bug: error messages not Align on Update Salary form

--- a/src/main/webapp/assets/sass/current-job.sass
+++ b/src/main/webapp/assets/sass/current-job.sass
@@ -349,6 +349,8 @@
                   z-index: 555
                 input
                   width: 100%
+            .error-messages
+              padding-left: 30%
         .update-job-information.only-read
           .overlap-form
             display: block
